<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Political Party Manager</string>
    <string name="title_Fragment1">Parties</string>
    <string name="title_Fragment2">Details</string>
    <string name="title_Fragment3">Promises</string>
    <string name="action_settings">dumpRItoF</string>
    <string name="action_info">LicenseInfo</string>
    <string name="action_resetDb">resetDb</string>
    <string name="action_addParty">AP</string>
    <string name="productid_text">ID</string>
    <string name="idvalue_text"></string>
    <string name="productname_text">Name</string>
    <string name="productquantity_text">Quantity</string>
    <string name="add_string">Add/Save</string>
    <string name="find_text">FIND</string>
    <string name="delete_text">DEL</string>
    <string name="button_reload">Reload</string>
    <string name="contextdiscriptionimage"></string>
    <string name="button_save">Save</string>
    <string name="buttonAdd">Add</string>
    <string name="fragment2_default">new Party</string>
    <string name="button_addPr">AddPr</string>
    

</resources>
